--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   firebase_core: ^1.24.0
+  google_sign_in: ^5.4.2
+  firebase_auth: ^3.11.2
   
 
 dev_dependencies:
